--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Geocoding utilities",
   "main": "lib/geo-utils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/test.js"
   },
   "repository": {
     "type": "git",
