--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "geo-utils",
-  "version": "0.0.1",
+  "name": "geo-utils-jp",
+  "version": "0.0.2",
   "description": "Geocoding utilities",
   "main": "./lib/geo-utils.js",
   "scripts": {
-    "test": "mocha test/test.js"
+    "test": "mocha test/test.js --reporter nyan"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
   "dependencies": {
     "async": "^0.9.0",
     "request": "^2.55.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {}
 }
