--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Geocoding utilities",
   "main": "./lib/geo-utils.js",
   "scripts": {
-    "test": "mocha test/test.js --reporter nyan"
+    "test": "mocha test/test.js --reporter nyan --timeout 10000"
   },
   "repository": {
     "type": "git",
